Update BPFDoor abnormal process id or lock file accessed.yml

--- a/rules/linux/auditd/BPFDoor abnormal process id or lock file accessed.yml
+++ b/rules/linux/auditd/BPFDoor abnormal process id or lock file accessed.yml
@@ -3,6 +3,7 @@ id: 808146b2-9332-4d78-9416-d7e47012d83d
 status: experimental
 description: detects BPFDoor .lock and .pid files access in temporary file storage facility
 author: Rafal Piasecki
+date: 2022/08/10
 references: 
     - https://www.sandflysecurity.com/blog/bpfdoor-an-evasive-linux-backdoor-technical-analysis/
     - https://www.elastic.co/security-labs/a-peek-behind-the-bpfdoor
