--- a/rules/linux/auditd/BPF_Door_port_redirect.yml
+++ b/rules/linux/auditd/BPF_Door_port_redirect.yml
@@ -21,6 +21,6 @@ detection:
       - '--to-ports 43'
     condition: cmd and keywords
 level: medium
-tags: T1562.004
+tags: attack.T1562.004
 falsepositives:
    - legitimate ports redirect
